handbook_examples/org.moflon.doc.handbook.examples.final.visual.dictionaryCodeAdapter/src/org/moflon/moca/dictionary/parser/DictionaryParser.g
parser grammar DictionaryParser;

options {
  language = Java;
  tokenVocab = DictionaryLexer;
  output = AST;
}

@members {
  public Collection<Problem> problems = new ArrayList<Problem>();

      public void displayRecognitionError(String[] tokenNames,
                                        RecognitionException e) {
          Problem problem = ProcessingFactory.eINSTANCE.createProblem();
          int line  = e.line;
          int charPos = e.charPositionInLine;
          int tokenLenght = 1;
          Token token = e.token;
          if(token != null) 
            tokenLenght = token.getText().length();
                  
          
          problem.setType(ProblemType.ERROR);
          problem.setLine(line); 
          problem.setCharacterPositionStart(charPos); 
          problem.setCharacterPositionEnd(charPos+tokenLenght);
          problem.setMessage("Parser: " + getErrorMessage(e, tokenNames));
          
          problems.add(problem);
          super.displayRecognitionError(tokenNames, e);
    }
}

@header {
package org.moflon.moca.dictionary.parser; 
import java.util.Collection;
import org.moflon.core.moca.processing.ProcessingFactory;
import org.moflon.core.moca.processing.Problem;
import org.moflon.core.moca.processing.ProblemType;
}

// Parser Rules:
main: title email? OPEN entry+ CLOSE -> ^(DICTIONARY title email? entry+);

title: TITLE QUOTED_STRING -> QUOTED_STRING;

email: EMAIL QUOTED_STRING -> QUOTED_STRING;

entry: QUOTED_STRING SEPARATOR level -> ^(ENTRY QUOTED_STRING level);

level: (BEGINNER | ADVANCED | MASTER );
